# BayanSynthTTS

./: .gitignore  README.md  _hf_readme.md  _hf_upload.py  check_tashkeel.py  pyproject.toml  regen_basic.py  requirements.txt
.github/workflows/: ci.yml
bayansynthtts/: __init__.py  app.py  inference.py  tashkeel.py
conf/: models.yaml
cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice/dataset/: processor.py
cosyvoice/flow/: flow.py
cosyvoice/hifigan/: generator.py
cosyvoice/utils/: executor.py  file_utils.py  onnx.py  train_utils.py
matcha/: __init__.py
matcha/hifigan/: __init__.py  models.py
matcha/models/: __init__.py
matcha/models/components/: __init__.py  decoder.py  flow_matching.py  transformer.py
matcha/utils/: __init__.py  audio.py
scripts/: copy_checkpoints.bat  infer.bat  run_ui.bat  setup_models.bat  setup_models.py
voices/: README.md
